--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -60,6 +60,10 @@ body {
   color: var(--accent-color);
 }
 
+.nav-portfolio {
+  color: var(--accent-color);
+}
+
 .nav-link {
   color: var(--text-color);
   font-size: 14px;
@@ -109,6 +113,10 @@ body {
 .card-item button:hover {
   background-color: var(--accent-color);
   color: var(--main-background);
+}
+
+.card-item {
+  box-shadow: 0px 3px 1px 0px rgba(0, 0, 0, 0.10), 0px 1px 2px 0px rgba(0, 0, 0, 0.08), 0px 2px 2px 0px rgba(0, 0, 0, 0.12);
 }
 
 .card-button {
