--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
-    /* outline: 1px solid red; */
+    outline: 1px solid red;
   }
   
   .header {
@@ -60,6 +60,10 @@
     color: var(--accent-color);
   }
   
+  .nav-studio {
+    color: var(--accent-color);
+  }
+
   .nav-link {
     color: var(--text-color);
     font-size: 14px;
