--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -110,12 +110,9 @@ body {
 }
 
 
-.card-item button:hover {
+.card-button:hover {
   background-color: var(--accent-color);
   color: var(--main-background);
-}
-
-.card-item {
   box-shadow: 0px 3px 1px 0px rgba(0, 0, 0, 0.10), 0px 1px 2px 0px rgba(0, 0, 0, 0.08), 0px 2px 2px 0px rgba(0, 0, 0, 0.12);
 }
 
@@ -131,6 +128,7 @@ body {
   background-color:var(--team-background);
   border:none;
   padding: 6px 22px;
+  border-radius: 4px;
 }
 
 .card-list {
