--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,9 @@
     padding-top: 200px;
     padding-bottom: 200px;
     text-align: center;
+    background-size: cover;
+   
+
   }
   .hero-title {
     color: var(--main-background);
@@ -140,9 +143,6 @@
     background-size: 70px;
     margin-bottom: 30px;
     display: block;
-    
-    
-    
       }
       
       .advantages-item:nth-child(2)::before{
@@ -233,19 +233,18 @@
   .team-box {
     display: flex;
     gap: 30px;
-    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px 0px rgba(0, 0, 0, 0.20);
-
-
   }
-
+  
   .team-item {
-  flex-basis:calc((100% - 90px) / 4);
-}
+    flex-basis:calc((100% - 90px) / 4);
+    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px 0px rgba(0, 0, 0, 0.20);
+  }
   
   .team-vraper {
     padding-top: 30px;
     padding-bottom: 30px;
     background-color: var(--main-background);
+    border-radius: 0px 0px 4px 4px;
 
   }
   
@@ -257,6 +256,7 @@
     letter-spacing: 0.48px;
     text-align: center;
     margin-bottom: 10px;
+    border-radius: 0px 0px 4px 4px;
   }
   
   .team-text {
